# fleet-logger

./: CHARTER.md  DOCKSIDE-EXAM.md  README.md  cli.py  logger.py  pyproject.toml  query.py  server.py
tests/: test_fleet_logger.py
